--- a/css/styles.css
+++ b/css/styles.css
@@ -197,3 +197,25 @@ header nav li a {
   background-image: linear-gradient(#41EAE3, #2293B7) !important;
 
 }
+
+@media only screen and (max-width: 1368px) {
+  nav {
+    display: none !important;
+  }
+  .burger-icon {
+    display: block !important;
+  }
+}
+
+@media only screen and (max-width: 1180px) {
+  .service-cards-row {
+    flex-wrap: wrap;
+    padding: 0;
+  }
+}
+
+.burger-icon {
+  width: 50px;
+  height: 50px;
+  display: none;
+}
